--- a/templates/front-page.html
+++ b/templates/front-page.html
@@ -10,9 +10,9 @@
       <!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
       <!-- wp:pattern {"slug":"inwestycje"} /-->
       <!-- wp:pattern {"slug":"blog"} /-->
-      <!-- wp:template-part {"slug":"front-page/cta"} /-->
-      <!-- wp:template-part {"slug":"front-page/newsletter"} /-->
-      <!-- wp:template-part {"slug":"front-page/footer"} /-->
+      <!-- wp:template-part {"slug":"cta"} /-->
+      <!-- wp:template-part {"slug":"newsletter"} /-->
+      <!-- wp:template-part {"slug":"footer"} /-->
       <!-- wp:template-part {"slug":"footer"} /-->
     </div>
     <!-- /wp:group -->
