--- a/templates/page-dla-akcjonariuszy.html
+++ b/templates/page-dla-akcjonariuszy.html
@@ -1,34 +1,34 @@
 <!-- wp:group -->
 <div id="PB Górski theme" class="wp-block-group overflow-x-hidden">
-	<!-- wp:list -->
-	<ul>
-		<!-- wp:list-item -->
-		<li>
-			<script>
-				AOS.init({
-					duration: 600,
-					easing: 'ease',
-					once: true
-				});
-			</script>
-		</li>
-		<!-- /wp:list-item -->
-	</ul>
-	<!-- /wp:list -->
+  <!-- wp:list -->
+  <ul>
+    <!-- wp:list-item -->
+    <li>
+      <script>
+        AOS.init({
+          duration: 600,
+          easing: "ease",
+          once: true,
+        });
+      </script>
+    </li>
+    <!-- /wp:list-item -->
+  </ul>
+  <!-- /wp:list -->
 
-	<!-- wp:template-part {"slug":"front-page/header-white"} /-->
+  <!-- wp:template-part {"slug":"header-white"} /-->
 
-	<!-- wp:group -->
-	<div id="main" class="wp-block-group ">
-		<!-- wp:group -->
-		<div id="Page content" class="wp-block-group page-content-wrapper" >
- 			<!-- wp:pattern {"slug":"dla-akcjonariuszy"} /-->
+  <!-- wp:group -->
+  <div id="main" class="wp-block-group">
+    <!-- wp:group -->
+    <div id="Page content" class="wp-block-group page-content-wrapper">
+      <!-- wp:pattern {"slug":"dla-akcjonariuszy"} /-->
 
-			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
-			<!-- wp:template-part {"slug":"front-page/footer"} /-->
-		</div>
-		<!-- /wp:group -->
-	</div>
-	<!-- /wp:group -->
+      <!-- wp:template-part {"slug":"newsletter"} /-->
+      <!-- wp:template-part {"slug":"footer"} /-->
+    </div>
+    <!-- /wp:group -->
+  </div>
+  <!-- /wp:group -->
 </div>
 <!-- /wp:group -->
