--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -1,6 +1,6 @@
 <!-- wp:group -->
 <div id="PB Górski theme" class="wp-block-group overflow-x-hidden">
-	<!-- wp:template-part {"slug":"front-page/header-white"} /-->
+	<!-- wp:template-part {"slug":"header-white"} /-->
 
 	<!-- wp:group -->
 	<div id="main" class="wp-block-group ">
@@ -48,7 +48,7 @@
 					<!-- wp:group {"isLink":false} -->
 					<div class="wp-block-group aos-fade-right  post-item post-item-parking">
 						<!-- wp:group -->
-						<div class="wp-block-group list-item-mieszkanie group container mx-auto w-full py-[20px] text-[16px] text-textGray flex justify-between items-center"> 
+						<div class="wp-block-group list-item-mieszkanie group container mx-auto w-full py-[20px] text-[16px] text-textGray flex justify-between items-center">
 							<!-- wp:group -->
 							<div class="wp-block-group flex gap-[20px] desktop:gap-[200px]">
 								<!-- wp:post-terms {"term":"miasto"} /-->
@@ -67,9 +67,9 @@
 			</div>
 			<!-- /wp:group -->
 
-			<!-- wp:template-part {"slug":"front-page/cta"} /-->
-			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
-			<!-- wp:template-part {"slug":"front-page/footer"} /-->
+			<!-- wp:template-part {"slug":"cta"} /-->
+			<!-- wp:template-part {"slug":"newsletter"} /-->
+			<!-- wp:template-part {"slug":"footer"} /-->
 		</div>
 		<!-- /wp:group -->
 	</div>
