--- a/templates/page-lista-mieszkan.html
+++ b/templates/page-lista-mieszkan.html
@@ -16,19 +16,18 @@
   </ul>
   <!-- /wp:list -->
 
-  <!-- wp:template-part {"slug":"front-page/header-white"} /-->
+  <!-- wp:template-part {"slug":"header-white"} /-->
 
   <!-- wp:group -->
   <div id="main" class="wp-block-group">
     <!-- wp:group -->
     <div id="Page content" class="wp-block-group page-content-wrapper">
-     
       <!-- wp:post-content {"layout":{"type":"constrained"}} /-->
 
-	  <!-- wp:pattern {"slug":"lista-mieszkan-content"} /-->
-      <!-- wp:template-part {"slug":"front-page/cta"} /-->
-      <!-- wp:template-part {"slug":"front-page/newsletter"} /-->
-      <!-- wp:template-part {"slug":"front-page/footer"} /-->
+      <!-- wp:pattern {"slug":"lista-mieszkan-content"} /-->
+      <!-- wp:template-part {"slug":"cta"} /-->
+      <!-- wp:template-part {"slug":"newsletter"} /-->
+      <!-- wp:template-part {"slug":"footer"} /-->
     </div>
     <!-- /wp:group -->
   </div>
