--- a/templates/category-osiedle-swirskiego.html
+++ b/templates/category-osiedle-swirskiego.html
@@ -1,86 +1,101 @@
 <!-- wp:group -->
 <div id="PB Górski theme" class="wp-block-group overflow-x-hidden">
-	<!-- wp:list -->
-	<ul>
-		<!-- wp:list-item -->
-		<li>
-			<script>
-				AOS.init({
-					duration: 600,
-					easing: 'ease',
-					once: true
-				});
-			</script>
-		</li>
-		<!-- /wp:list-item -->
-	</ul>
-	<!-- /wp:list -->
+  <!-- wp:list -->
+  <ul>
+    <!-- wp:list-item -->
+    <li>
+      <script>
+        AOS.init({
+          duration: 600,
+          easing: "ease",
+          once: true,
+        });
+      </script>
+    </li>
+    <!-- /wp:list-item -->
+  </ul>
+  <!-- /wp:list -->
 
-	<!-- wp:template-part {"slug":"front-page/header-white"} /-->
+  <!-- wp:template-part {"slug":"header-white"} /-->
 
-	<!-- wp:group -->
-	<div id="main" class="wp-block-group ">
-		<!-- wp:group -->
-		<div id="Page content" class="wp-block-group page-content-wrapper">
+  <!-- wp:group -->
+  <div id="main" class="wp-block-group">
+    <!-- wp:group -->
+    <div id="Page content" class="wp-block-group page-content-wrapper">
       <!-- wp:pattern {"slug":"page-blog-title"} /-->
-			<!-- wp:group -->
-			<div class="container mx-auto desktop:px-0 px-[20px]">
-				<!-- wp:query {"query":{"perPage":10,"pages":0,"offset":0,"postType":"post"},"isLink":true,"taxQuery":"osiedle-swirskiego",} -->
-					<!-- wp:post-template -->
-					<!-- wp:group {"isLink":true} -->
-					<div class="invest-tile max-w-full mb-[80px]">
-						<!-- wp:group -->
-						<div class="relative group inline-block h-full max-w-full" data-aos="fade-right" data-aos-offset="30">
-							<!-- wp:group -->
-							<div class="wp-block-group wrapper w-full h-full desktop:flex gap-[120px]">
-								<!-- wp:group -->
-								<div class="wp-block-image desktop:w-[50%] h-full m-0">
-									<!-- wp:post-featured-image {"isLink":true} /-->
-								</div>
-								<!-- /wp:group -->
+      <!-- wp:group -->
+      <div class="container mx-auto desktop:px-0 px-[20px]">
+        <!-- wp:query {"query":{"perPage":10,"pages":0,"offset":0,"postType":"post"},"isLink":true,"taxQuery":"osiedle-swirskiego",} -->
+        <!-- wp:post-template -->
+        <!-- wp:group {"isLink":true} -->
+        <div class="invest-tile max-w-full mb-[80px]">
+          <!-- wp:group -->
+          <div
+            class="relative group inline-block h-full max-w-full"
+            data-aos="fade-right"
+            data-aos-offset="30"
+          >
+            <!-- wp:group -->
+            <div
+              class="wp-block-group wrapper w-full h-full desktop:flex gap-[120px]"
+            >
+              <!-- wp:group -->
+              <div class="wp-block-image desktop:w-[50%] h-full m-0">
+                <!-- wp:post-featured-image {"isLink":true} /-->
+              </div>
+              <!-- /wp:group -->
 
-								<!-- wp:group -->
-								<div class="wp-block-group content desktop:w-[50%] flex flex-col items-start justify-center">
-									<!-- wp:group -->
-									<div class="mb-[30px] text-[24px] desktop:text-[36px] font-bold leading-[34px] desktop:leading-[46px]"><!-- wp:post-title {"isLink":true} /--></div>
-									<!-- /wp:group -->
+              <!-- wp:group -->
+              <div
+                class="wp-block-group content desktop:w-[50%] flex flex-col items-start justify-center"
+              >
+                <!-- wp:group -->
+                <div
+                  class="mb-[30px] text-[24px] desktop:text-[36px] font-bold leading-[34px] desktop:leading-[46px]"
+                >
+                  <!-- wp:post-title {"isLink":true} /-->
+                </div>
+                <!-- /wp:group -->
 
-									<!-- wp:group -->
-									<div class="wp-block-group post-excerpt mb-[40px]">
-										<!-- wp:post-excerpt {"isLink":true,"excerptLength":15} /-->
-									</div>
-									<!-- /wp:group -->
+                <!-- wp:group -->
+                <div class="wp-block-group post-excerpt mb-[40px]">
+                  <!-- wp:post-excerpt {"isLink":true,"excerptLength":15} /-->
+                </div>
+                <!-- /wp:group -->
 
-									<!-- wp:paragraph -->
-									<p class="relative inline flex gap-[8px] items-center text-primaryRed before:content-[''] before:inline-block cursor-pointer">Czytaj dalej<span class="text-[11px]">&#x25BA;</span>
-									</p>
-									<!-- /wp:paragraph -->
-								</div>
-								<!-- /wp:group -->
-							</div>
-							<!-- /wp:group -->
-						</div>
-						<!-- /wp:group -->
-					</div>
-					<!-- /wp:group -->
-					<!-- /wp:post-template -->
+                <!-- wp:paragraph -->
+                <p
+                  class="relative inline flex gap-[8px] items-center text-primaryRed before:content-[''] before:inline-block cursor-pointer"
+                >
+                  Czytaj dalej<span class="text-[11px]">&#x25BA;</span>
+                </p>
+                <!-- /wp:paragraph -->
+              </div>
+              <!-- /wp:group -->
+            </div>
+            <!-- /wp:group -->
+          </div>
+          <!-- /wp:group -->
+        </div>
+        <!-- /wp:group -->
+        <!-- /wp:post-template -->
 
-					<!-- wp:query-pagination -->
-					<!-- wp:query-pagination-previous {"label":"Poprzednie"} /-->
-					<!-- wp:query-pagination-numbers /-->
-					<!-- wp:query-pagination-next {"label":"Następne"} /-->
-					<!-- /wp:query-pagination -->
+        <!-- wp:query-pagination -->
+        <!-- wp:query-pagination-previous {"label":"Poprzednie"} /-->
+        <!-- wp:query-pagination-numbers /-->
+        <!-- wp:query-pagination-next {"label":"Następne"} /-->
+        <!-- /wp:query-pagination -->
 
-				<!-- /wp:query -->
-			</div>
-			<!-- /wp:group -->
+        <!-- /wp:query -->
+      </div>
+      <!-- /wp:group -->
 
-			<!-- wp:template-part {"slug":"front-page/cta"} /-->
-			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
-			<!-- wp:template-part {"slug":"front-page/footer"} /-->
-		</div>
-		<!-- /wp:group -->
-	</div>
-	<!-- /wp:group -->
+      <!-- wp:template-part {"slug":"cta"} /-->
+      <!-- wp:template-part {"slug":"newsletter"} /-->
+      <!-- wp:template-part {"slug":"footer"} /-->
+    </div>
+    <!-- /wp:group -->
+  </div>
+  <!-- /wp:group -->
 </div>
 <!-- /wp:group -->
