--- a/templates/page-contact.html
+++ b/templates/page-contact.html
@@ -1,6 +1,6 @@
 <!-- wp:group -->
 <div id="PB Górski theme" class="wp-block-group overflow-x-hidden">
-  <!-- wp:template-part {"slug":"front-page/header-white"} /-->
+  <!-- wp:template-part {"slug":"header-white"} /-->
 
   <!-- wp:group -->
   <div id="main" class="wp-block-group">
@@ -44,8 +44,8 @@
       </div>
       <!-- /wp:group -->
 
-      <!-- wp:template-part {"slug":"front-page/newsletter"} /-->
-      <!-- wp:template-part {"slug":"front-page/footer"} /-->
+      <!-- wp:template-part {"slug":"newsletter"} /-->
+      <!-- wp:template-part {"slug":"footer"} /-->
     </div>
     <!-- /wp:group -->
   </div>
