--- a/templates/page-galeria-lokalizacja.html
+++ b/templates/page-galeria-lokalizacja.html
@@ -1,30 +1,31 @@
 <!-- wp:group -->
 <div id="PB Górski theme" class="wp-block-group overflow-x-hidden">
-	<!-- wp:list -->
-	<ul class="hidden aos-init">
-		<!-- wp:list-item -->
-		<li>
-			test
-		</li>
-		<!-- /wp:list-item -->
-	</ul>
-	<!-- /wp:list -->
+  <!-- wp:list -->
+  <ul class="hidden aos-init">
+    <!-- wp:list-item -->
+    <li>test</li>
+    <!-- /wp:list-item -->
+  </ul>
+  <!-- /wp:list -->
 
-	<!-- wp:template-part {"slug":"front-page/header-white"} /-->
+  <!-- wp:template-part {"slug":"header-white"} /-->
 
-	<!-- wp:group -->
-	<div id="main" class="wp-block-group ">
-		<!-- wp:group -->
-		<div id="Page content" class="wp-block-group page-content-wrapper inwestycje_hidden_filtr_posts" >
+  <!-- wp:group -->
+  <div id="main" class="wp-block-group">
+    <!-- wp:group -->
+    <div
+      id="Page content"
+      class="wp-block-group page-content-wrapper inwestycje_hidden_filtr_posts"
+    >
       <!-- wp:pattern {"slug":"galeria-lokalizacja-banner"} /-->
-			<!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
+      <!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
       <!-- wp:pattern {"slug":"galeria-lokalizacja-content"} /-->
-			<!-- wp:template-part {"slug":"front-page/cta"} /-->
-			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
-			<!-- wp:template-part {"slug":"front-page/footer"} /-->
-		</div>
-		<!-- /wp:group -->
-	</div>
-	<!-- /wp:group -->
+      <!-- wp:template-part {"slug":"cta"} /-->
+      <!-- wp:template-part {"slug":"newsletter"} /-->
+      <!-- wp:template-part {"slug":"footer"} /-->
+    </div>
+    <!-- /wp:group -->
+  </div>
+  <!-- /wp:group -->
 </div>
 <!-- /wp:group -->
