--- a/templates/page-inwestycje-zrealizowane.html
+++ b/templates/page-inwestycje-zrealizowane.html
@@ -1,83 +1,104 @@
 <!-- wp:group -->
 <div id="PB Górski theme" class="wp-block-group overflow-x-hidden">
+  <!-- wp:template-part {"slug":"header-white"} /-->
 
-	<!-- wp:template-part {"slug":"front-page/header-white"} /-->
-
-	<!-- wp:group -->
-	<div id="main" class="wp-block-group ">
-		<!-- wp:group -->
-		<div id="Page content" class="wp-block-group page-content-wrapper" >
+  <!-- wp:group -->
+  <div id="main" class="wp-block-group">
+    <!-- wp:group -->
+    <div id="Page content" class="wp-block-group page-content-wrapper">
       <!-- wp:pattern {"slug":"not_page-inwestycje-zrealizowane"} /-->
 
-			<!-- wp:group -->
-			<div class="wp-block-group title-wrapper mb-[40px] bg-[#f6f7fa]">
-				<!-- wp:group -->
-				<div class="wp-block-group container mx-auto desktop:px-0 px-[20px] py-[20px] desktop:flex items-center">
-					<!-- wp:group -->
-					<div class="wp-block-group left-col desktop:w-[70%]">
-						<!-- wp:heading {"level":1} -->
-						<h1 class="container mx-auto desktop:px-0 px-[20px] my-[40px] text-[36px] desktop:text-[60px] text-[#2e384c] font-bold leading-[44px]">Inwestycje zrealizowane</h1>
-						<!-- /wp:heading -->
-					</div>
-					<!-- /wp:group -->
-				</div>
-				<!-- /wp:group -->
-			</div>
-			<!-- /wp:group -->
+      <!-- wp:group -->
+      <div class="wp-block-group title-wrapper mb-[40px] bg-[#f6f7fa]">
+        <!-- wp:group -->
+        <div
+          class="wp-block-group container mx-auto desktop:px-0 px-[20px] py-[20px] desktop:flex items-center"
+        >
+          <!-- wp:group -->
+          <div class="wp-block-group left-col desktop:w-[70%]">
+            <!-- wp:heading {"level":1} -->
+            <h1
+              class="container mx-auto desktop:px-0 px-[20px] my-[40px] text-[36px] desktop:text-[60px] text-[#2e384c] font-bold leading-[44px]"
+            >
+              Inwestycje zrealizowane
+            </h1>
+            <!-- /wp:heading -->
+          </div>
+          <!-- /wp:group -->
+        </div>
+        <!-- /wp:group -->
+      </div>
+      <!-- /wp:group -->
 
-			<!-- wp:group -->
-			<div class="wp-block-group container mx-auto desktop:px-0 px-[20px] [&>ul]:flex [&>ul]:flex-wrap [&>ul]:gap-[20px] [&>ul>li]:w-[370px] [&>ul>li]:wide:w-[460px]">
-				<!-- wp:query {"query":{"perPage":9,"pages":0,"offset":0,"postType":"inwest-zrealizowane"},"isLink":true} -->
-					<!-- wp:post-template -->
-					<!-- wp:group -->
-					<div class="wp-block-group invest-tile group w-full mb-[0px] desktop:mb-[80px]">
-						<!-- wp:group -->
-						<div class="wp-block-group relative group desktop:max-w-full max-w-[310px] h-full" data-aos="fade-up" data-aos-duration="300" data-aos-offset="30">
-							<!-- wp:group -->
-							<div class="wp-block-group wrapper w-full gap-[50px]">
-								<!-- wp:group -->
-								<div class="wp-block-group w-full mb-[30px] h-[330px]">
-									<!-- wp:post-featured-image {"isLink":true} /-->
-								</div>
-								<!-- /wp:group -->
+      <!-- wp:group -->
+      <div
+        class="wp-block-group container mx-auto desktop:px-0 px-[20px] [&>ul]:flex [&>ul]:flex-wrap [&>ul]:gap-[20px] [&>ul>li]:w-[370px] [&>ul>li]:wide:w-[460px]"
+      >
+        <!-- wp:query {"query":{"perPage":9,"pages":0,"offset":0,"postType":"inwest-zrealizowane"},"isLink":true} -->
+        <!-- wp:post-template -->
+        <!-- wp:group -->
+        <div
+          class="wp-block-group invest-tile group w-full mb-[0px] desktop:mb-[80px]"
+        >
+          <!-- wp:group -->
+          <div
+            class="wp-block-group relative group desktop:max-w-full max-w-[310px] h-full"
+            data-aos="fade-up"
+            data-aos-duration="300"
+            data-aos-offset="30"
+          >
+            <!-- wp:group -->
+            <div class="wp-block-group wrapper w-full gap-[50px]">
+              <!-- wp:group -->
+              <div class="wp-block-group w-full mb-[30px] h-[330px]">
+                <!-- wp:post-featured-image {"isLink":true} /-->
+              </div>
+              <!-- /wp:group -->
 
-								<!-- wp:group -->
-								<div class="wp-block-group mr-[20px] text-[24px] font-bold [&>h2>a]:text-[24px]"><!-- wp:post-title {"isLink":true, "level":5} /--></div>
-								<!-- /wp:group -->
+              <!-- wp:group -->
+              <div
+                class="wp-block-group mr-[20px] text-[24px] font-bold [&>h2>a]:text-[24px]"
+              >
+                <!-- wp:post-title {"isLink":true, "level":5} /-->
+              </div>
+              <!-- /wp:group -->
 
-								<!-- wp:paragraph -->
-								<p class="mr-[8px] relative inline flex gap-x-[8px] items-center text-primaryRed cursor-pointer">Czytaj dalej<span class="h-[12px] text-[11px]">&#x25BA;</span>
-								</p>
-								<!-- /wp:paragraph -->
-							</div>
-							<!-- /wp:group -->
-						</div>
-						<!-- /wp:group -->
-					</div>
-					<!-- /wp:group -->
+              <!-- wp:paragraph -->
+              <p
+                class="mr-[8px] relative inline flex gap-x-[8px] items-center text-primaryRed cursor-pointer"
+              >
+                Czytaj dalej<span class="h-[12px] text-[11px]">&#x25BA;</span>
+              </p>
+              <!-- /wp:paragraph -->
+            </div>
+            <!-- /wp:group -->
+          </div>
+          <!-- /wp:group -->
+        </div>
+        <!-- /wp:group -->
 
-					<!-- /wp:post-template -->
+        <!-- /wp:post-template -->
 
-					<!-- wp:group -->
-					<div class="wp-block-group flex items-center justify-center">
-						<!-- wp:query-pagination -->
-						<!-- wp:query-pagination-previous {"label":"Poprzednie"} /-->
-						<!-- wp:query-pagination-numbers {"className":"flex gap-[30px]"} /-->
-						<!-- wp:query-pagination-next {"label":"Następne"} /-->
-						<!-- /wp:query-pagination -->
-					</div>
-					<!-- /wp:group -->
+        <!-- wp:group -->
+        <div class="wp-block-group flex items-center justify-center">
+          <!-- wp:query-pagination -->
+          <!-- wp:query-pagination-previous {"label":"Poprzednie"} /-->
+          <!-- wp:query-pagination-numbers {"className":"flex gap-[30px]"} /-->
+          <!-- wp:query-pagination-next {"label":"Następne"} /-->
+          <!-- /wp:query-pagination -->
+        </div>
+        <!-- /wp:group -->
 
-				<!-- /wp:query -->
-			</div>
-			<!-- /wp:group -->			
+        <!-- /wp:query -->
+      </div>
+      <!-- /wp:group -->
 
-			<!-- wp:template-part {"slug":"front-page/cta"} /-->
-			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
-			<!-- wp:template-part {"slug":"front-page/footer"} /-->
-		</div>
-		<!-- /wp:group -->
-	</div>
-	<!-- /wp:group -->
+      <!-- wp:template-part {"slug":"cta"} /-->
+      <!-- wp:template-part {"slug":"newsletter"} /-->
+      <!-- wp:template-part {"slug":"footer"} /-->
+    </div>
+    <!-- /wp:group -->
+  </div>
+  <!-- /wp:group -->
 </div>
 <!-- /wp:group -->
