--- a/templates/page-lokalizacja-osiedle-srebrniki.html
+++ b/templates/page-lokalizacja-osiedle-srebrniki.html
@@ -1,6 +1,6 @@
 <!-- wp:group -->
 <div id="PB Górski theme" class="wp-block-group overflow-x-hidden">
-  <!-- wp:template-part {"slug":"front-page/header-white"} /-->
+  <!-- wp:template-part {"slug":"header-white"} /-->
 
   <!-- wp:group -->
   <div id="main" class="wp-block-group">
@@ -23,9 +23,9 @@
       <!-- wp:pattern {"slug":"lokalizacja-osiedle-srebrniki-banner"} /-->
       <!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
       <!-- wp:pattern {"slug":"lokalizacja-osiedle-srebrniki-content"} /-->
-      <!-- wp:template-part {"slug":"front-page/cta"} /-->
-      <!-- wp:template-part {"slug":"front-page/newsletter"} /-->
-      <!-- wp:template-part {"slug":"front-page/footer"} /-->
+      <!-- wp:template-part {"slug":"cta"} /-->
+      <!-- wp:template-part {"slug":"newsletter"} /-->
+      <!-- wp:template-part {"slug":"footer"} /-->
     </div>
     <!-- /wp:group -->
   </div>
