--- a/templates/page-o-inwestycji-sw-piotra.html
+++ b/templates/page-o-inwestycji-sw-piotra.html
@@ -1,22 +1,24 @@
 <!-- wp:group -->
 <div id="PB Górski theme" class="wp-block-group overflow-x-hidden">
+  <!-- wp:template-part {"slug":"header-white"} /-->
 
-	<!-- wp:template-part {"slug":"front-page/header-white"} /-->
-
-	<!-- wp:group -->
-	<div id="main" class="wp-block-group ">
-		<!-- wp:group -->
-		<div id="Page content" class="wp-block-group page-content-wrapper inwestycje_hidden_filtr_posts" >
+  <!-- wp:group -->
+  <div id="main" class="wp-block-group">
+    <!-- wp:group -->
+    <div
+      id="Page content"
+      class="wp-block-group page-content-wrapper inwestycje_hidden_filtr_posts"
+    >
       <!-- wp:pattern {"slug":"o-inwestycji-sw-piotra-banner"} /-->
-			<!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
+      <!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
       <!-- wp:pattern {"slug":"o-inwestycji-sw-piotra-search"} /-->
       <!-- wp:pattern {"slug":"o-inwestycji-sw-piotra-content"} /-->
-			<!-- wp:template-part {"slug":"front-page/cta"} /-->
-			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
-			<!-- wp:template-part {"slug":"front-page/footer"} /-->
-		</div>
-		<!-- /wp:group -->
-	</div>
-	<!-- /wp:group -->
+      <!-- wp:template-part {"slug":"cta"} /-->
+      <!-- wp:template-part {"slug":"newsletter"} /-->
+      <!-- wp:template-part {"slug":"footer"} /-->
+    </div>
+    <!-- /wp:group -->
+  </div>
+  <!-- /wp:group -->
 </div>
 <!-- /wp:group -->
