--- a/templates/page-polityka-cookies.html
+++ b/templates/page-polityka-cookies.html
@@ -1,19 +1,18 @@
 <!-- wp:group -->
 <div id="PB Górski theme" class="wp-block-group overflow-x-hidden">
+  <!-- wp:template-part {"slug":"header-white"} /-->
 
-	<!-- wp:template-part {"slug":"front-page/header-white"} /-->
+  <!-- wp:group -->
+  <div id="main" class="wp-block-group">
+    <!-- wp:group -->
+    <div id="Page content" class="wp-block-group page-content-wrapper">
+      <!-- wp:pattern {"slug":"polityka-cookies"} /-->
 
-	<!-- wp:group -->
-	<div id="main" class="wp-block-group ">
-		<!-- wp:group -->
-		<div id="Page content" class="wp-block-group page-content-wrapper" >
- 			<!-- wp:pattern {"slug":"polityka-cookies"} /-->
-
-			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
-			<!-- wp:template-part {"slug":"front-page/footer"} /-->
-		</div>
-		<!-- /wp:group -->
-	</div>
-	<!-- /wp:group -->
+      <!-- wp:template-part {"slug":"newsletter"} /-->
+      <!-- wp:template-part {"slug":"footer"} /-->
+    </div>
+    <!-- /wp:group -->
+  </div>
+  <!-- /wp:group -->
 </div>
 <!-- /wp:group -->
