--- a/templates/taxonomy-osiedla-browar-gdanski.html
+++ b/templates/taxonomy-osiedla-browar-gdanski.html
@@ -1,34 +1,32 @@
 <!-- wp:group -->
 <div id="PB Górski theme" class="wp-block-group overflow-x-hidden">
-	<!-- wp:list -->
-	<ul class="hidden aos-init">
-		<!-- wp:list-item -->
-		<li>
-			test
-		</li>
-		<!-- /wp:list-item -->
-	</ul>
-	<!-- /wp:list -->
+  <!-- wp:list -->
+  <ul class="hidden aos-init">
+    <!-- wp:list-item -->
+    <li>test</li>
+    <!-- /wp:list-item -->
+  </ul>
+  <!-- /wp:list -->
 
-	<!-- wp:template-part {"slug":"front-page/header-white"} /-->
+  <!-- wp:template-part {"slug":"header-white"} /-->
 
-	<!-- wp:group -->
-	<div id="main" class="wp-block-group ">
-		<!-- wp:group -->
-		<div id="Page content" class="wp-block-group page-content-wrapper" >
-      	tax broar gdanski		
-			<!-- wp:query {"query":{"inherit":true}} -->
-				<!-- wp:post-template -->
-				<!-- wp:pattern {"slug":"taxonomy-osiedla-browar-gdanski"} /-->
-				<!-- /wp:post-template -->
-			<!-- /wp:query -->
+  <!-- wp:group -->
+  <div id="main" class="wp-block-group">
+    <!-- wp:group -->
+    <div id="Page content" class="wp-block-group page-content-wrapper">
+      tax broar gdanski
+      <!-- wp:query {"query":{"inherit":true}} -->
+      <!-- wp:post-template -->
+      <!-- wp:pattern {"slug":"taxonomy-osiedla-browar-gdanski"} /-->
+      <!-- /wp:post-template -->
+      <!-- /wp:query -->
 
-			<!-- wp:template-part {"slug":"front-page/cta"} /-->
-			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
-			<!-- wp:template-part {"slug":"front-page/footer"} /-->
-		</div>
-		<!-- /wp:group -->
-	</div>
-	<!-- /wp:group -->
+      <!-- wp:template-part {"slug":"cta"} /-->
+      <!-- wp:template-part {"slug":"newsletter"} /-->
+      <!-- wp:template-part {"slug":"footer"} /-->
+    </div>
+    <!-- /wp:group -->
+  </div>
+  <!-- /wp:group -->
 </div>
 <!-- /wp:group -->
