investments query in htm template

--- a/templates/front-page.html
+++ b/templates/front-page.html
@@ -18,7 +18,7 @@
 						<div class="wp-block-group">
 							<!-- wp:group -->
 							<div class="wp-block-group">
-								<!-- wp:post-terms {"term":"miasto"} /-->
+								<!-- wp:post-terms {"term":"inwestycja"} /-->
 								<!-- wp:term-description /-->
 								<!-- wp:term-count /-->
 								<!-- wp:post-title {"level":6} /-->
