--- a/templates/front-page.html
+++ b/templates/front-page.html
@@ -10,7 +10,7 @@
       <!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
       <!-- wp:pattern {"slug":"inwestycje"} /-->
 
-      <!-- wp:query {"query":{"perPage":3,"pages":0,"offset":0,"postType":"inwestycja"},"isLink":true} -->
+      <!-- wp:query {"query":{"perPage":3,"pages":0,"offset":0,"postType":"mieszkania"},"isLink":true} -->
 				<!-- wp:post-template -->
 					<!-- wp:group {"isLink":true  } -->
 					<div class="wp-block-group aos-fade-right">
