--- a/templates/front-page.html
+++ b/templates/front-page.html
@@ -13,9 +13,9 @@
       <!-- wp:group -->
       <div class="wp-block-group query_container aos-fade-right">
         <!-- wp:query {"query":{"perPage":0,"pages":0,"offset":0,"postType":"mieszkania"},"isLink":true} -->
-        !-- wp:group -->
-        <div class="wp-block-group query_container aos-fade-right flex gap-[30px]">
-          <!-- wp:post-template -->
+        <!-- wp:group -->
+        <div class="wp-block-group query_container aos-fade-right">
+          <!-- wp:post-template {"className"="flex"} -->
             <!-- wp:group {"isLink":true  } -->
             <div class="wp-block-group aos-fade-right">
               <!-- wp:group -->
