fetured img as gallery test [mieszkanie page]

--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -203,7 +203,10 @@
             <!-- wp:group -->
             <div class="wp-block-group left-col desktop:w-[55%]">
               <!-- wp:post-content /-->
-              <!-- wp:post-featured-image /-->
+              <!-- wp:gallery {"linkTo":"none","className":"columns-2"} -->
+                <!-- wp:post-featured-image /-->
+              <!-- /wp:gallery -->
+
             </div>
             <!-- /wp:group -->
 
