--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -7,7 +7,11 @@
     <!-- wp:group -->
     <div id="Page content" class="wp-block-group page-content-wrapper relative">
       <!-- wp:group -->
-      <div class="featured_img_popup_container hidden w-full h-full fixed top-0 left-0 bg-[rgba(0,0,0,0.8)]">
+      <div class="featured_img_popup_container hidden w-full h-full fixed top-0 left-0 bg-[rgba(0,0,0,0.8)] z-[2]">
+        <!-- wp:group -->
+        <div class="wp-block-group js-close-popup-featured-image">&#x2715;</div>
+        <!-- /wp:group -->
+
         <!-- wp:image -->
         <figure class="wp-block-image js-featured-img-popup">
           <img
