featured image zoom tests

--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -7,9 +7,9 @@
     <!-- wp:group -->
     <div id="Page content" class="wp-block-group page-content-wrapper relative">
       <!-- wp:group -->
-      <div class="featured_img_popup_container hidden w-full h-full fixed top-0 left-0 bg-[rgba(0,0,0,0.8)] z-[2]">
+      <div class="featured_img_popup_container js-featured_img_popup_container hidden w-full h-full fixed top-0 left-0 bg-[rgba(0,0,0,0.8)] z-[2]">
         <!-- wp:group -->
-        <div class="wp-block-group js-close-popup-featured-image">&#x2715;</div>
+        <div class="wp-block-group js-close-popup-featured-image text-white absolute right-0 text-[60px] cursor-pointer">&#x2715;</div>
         <!-- /wp:group -->
 
         <!-- wp:image -->
@@ -219,7 +219,7 @@
             <!-- wp:group -->
             <div class="wp-block-group left-col desktop:w-[55%]">
               <!-- wp:post-content /-->
-              <!-- wp:post-featured-image /-->
+              <!-- wp:post-featured-image {"className":"cursor-pointer"}/-->
             </div>
             <!-- /wp:group -->
 
