featured image zoom tests

--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -7,13 +7,13 @@
     <!-- wp:group -->
     <div id="Page content" class="wp-block-group page-content-wrapper relative">
       <!-- wp:group -->
-      <div class="featured_img_popup_container js-featured_img_popup_container hidden w-full h-full fixed top-0 left-0 bg-[rgba(0,0,0,1)] z-[2]">
+      <div class="featured_img_popup_container js-featured_img_popup_container hidden flex flex-col items-center justify-center w-full h-full fixed top-0 left-0 bg-[rgba(0,0,0,1)] z-[2]">
         <!-- wp:group -->
-        <div class="wp-block-group js-close-popup-featured-image text-white absolute right-0 text-[60px] cursor-pointer">&#x2715;</div>
+        <div class="wp-block-group js-close-popup-featured-image text-white absolute top-0 right-0 text-[60px] cursor-pointer">&#x2715;</div>
         <!-- /wp:group -->
 
         <!-- wp:image -->
-        <figure class="wp-block-image js-featured-img-popup">
+        <figure class="wp-block-image js-featured-img-popup w-full h-full">
           <img
             src=""
             alt="popup-image"
@@ -22,6 +22,7 @@
         <!-- /wp:image -->
       </div>
       <!-- /wp:group -->
+      
       <!-- wp:query {"query":{"inherit":true}} -->
       <!-- wp:post-template -->
       <!-- wp:pattern {"slug":"_single-mieszkania"} /-->
