featured image zoom tests

--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -13,7 +13,7 @@
         <!-- /wp:group -->
 
         <!-- wp:image -->
-        <figure class="wp-block-image js-featured-img-popup w-full h-full">
+        <figure class="wp-block-image js-featured-img-popup max-w-[800px]">
           <img
             src=""
             alt="popup-image"
