featured image zoom tests

--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -13,7 +13,7 @@
         <!-- /wp:group -->
 
         <!-- wp:image -->
-        <figure class="wp-block-image js-featured-img-popup max-w-[800px]">
+        <figure class="wp-block-image js-featured-img-popup max-w-[800px] fullhd:max-w-[1024px]">
           <img
             src=""
             alt="popup-image"
