--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -7,7 +7,7 @@
     <!-- wp:group -->
     <div id="Page content" class="wp-block-group page-content-wrapper relative">
       <!-- wp:group -->
-      <div class="featured_img_popup_container js-featured_img_popup_container hidden flex flex-col items-center justify-center w-full h-full fixed top-0 left-0 bg-[rgba(0,0,0,0.8)] z-[2]">
+      <div class="featured_img_popup_container js-featured_img_popup_container opacity-0 opacity-100 flex flex-col items-center justify-center w-full h-full fixed top-0 left-0 bg-[rgba(0,0,0,0.8)] z-[2]">
         <!-- wp:group -->
         <div class="wp-block-group js-close-popup-featured-image text-white absolute top-[20px] right-[20px] text-[36px] cursor-pointer opacity-[0.7] hover:opacity-[1] taransition ease duration-200">&#x2715;</div>
         <!-- /wp:group -->
