featured image zoom tests

--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -13,7 +13,7 @@
         <!-- /wp:group -->
 
         <!-- wp:image -->
-        <figure class="wp-block-image js-featured-img-popup h-[95%]">
+        <figure class="wp-block-image js-featured-img-popup flex items-center justify-center h-[90%]">
           <img
             src=""
             alt="popup-image"
