--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1788,3 +1788,51 @@ background-color: #e8fbff!important;
 .single-mieszkania .wp-block-post-content + .wp-block-post-featured-image{
   display: none;
 }
+
+/* pan zoom */
+.container {
+  background-color: black;
+  color: red;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+}
+
+.panzoom {
+  position: absolute;
+  width:500px;
+  height:250px;
+  background-color: rgba(blue,.1);
+  left: 50px;
+  top: 20px;
+  overflow: visible;
+  border: 5px dotted rgba(#CCC,.1);
+}
+.diagram {
+  position: absolute;
+}
+.item {
+  cursor: pointer;
+  position: absolute;
+  overflow: hidden;
+  white-space:nowrap;
+  border: 1px solid darken(red,30%);
+  padding: 8px;
+  border-radius: 3px;
+  background-color: rgba(red, .2);
+}
+
+.jsplumb-connector path {    stroke:red;
+}
+.hint {
+  position: absolute;
+  color: grey;
+  left:100%;
+  top: -24px;
+  white-space:nowrap;
+  font-size:14px;
+}  
+
+/* end pan zoom */
