--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1788,7 +1788,7 @@ background-color: #e8fbff!important;
 .single-mieszkania .wp-block-post-content + .wp-block-post-featured-image{
   display: none;
 }
-
+/*  */
 .parent{
   width:300px;
   border:5px solid red;
@@ -1802,4 +1802,26 @@ background-color: #e8fbff!important;
   font-family:arial;
   padding:10px;
   cursor: pointer;
+}
+/*  */
+.container{
+  background: #333;display: grid;
+  grid-template-columns: auto auto auto;
+  padding:8px;box-sizing:border-box;
+  height: 500px;overflow:auto;
+}
+.item{
+  width: 90%;
+  height: 60px;
+  margin:60px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  color:#FFFFFF;
+}
+.item:nth-child(even){
+  background: #30a57f;
+}
+.item:nth-child(odd){
+  background:#c17a38;
 }
