featured image popup zoom test

--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -229,7 +229,7 @@
                 </div>
             </div>
 
-            <div class="container" id="items-container">
+            <div class="container_zoom" id="items-container">
               <div class="item"> </div>
               <div class="item"></div>
               <div class="item" style="width: 150%;">  </div>
