featured image popup zoom test

--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1804,7 +1804,7 @@ background-color: #e8fbff!important;
   cursor: pointer;
 }
 /*  */
-.container{
+.container_zoom{
   background: #333;display: grid;
   grid-template-columns: auto auto auto;
   padding:8px;box-sizing:border-box;
