--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1808,15 +1808,16 @@ background-color: #e8fbff!important;
   background: #333;display: grid;
   grid-template-columns: auto auto auto;
   padding:8px;box-sizing:border-box;
-  height: 500px;overflow:auto;
+  height: 250px;overflow:auto;
+  width: 250px;overflow:auto;
 }
 .item{
   width: 90%;
-  height: 200px;
+  /* height: 200px; */
   margin:60px;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+  /* display:flex; */
+  /* justify-content:center;
+  align-items:center; */
   color:#FFFFFF;
 }
 .item:nth-child(even){
