featured image popup zoom test

--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -290,7 +290,7 @@
               <!-- /wp:group -->
 
 
-              <div class="container_zoom" id="items-container">
+              <div class="container_zoom cursor-move" id="items-container">
                 <div class="item">
                   <img src="https://pbgorski.webo.design/pl/wp-content/uploads/sites/3/2024/01/Karty%20lokali%20Sukiennicza_2023_12_21_P1A01.jpg" alt="">
                 </div>
