--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1805,10 +1805,11 @@ background-color: #e8fbff!important;
 }
 /*  */
 .container_zoom{
-  height: 350px;overflow:auto;
-  width: 350px;overflow:auto;
+  height: 450px;overflow:auto;
+  width: 450px;overflow:auto;
 }
 .item{
   width: 300%;
   margin:0px;
 }
+/*  */
