featured image popup zoom test

--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -15,7 +15,7 @@
         <!-- /wp:group -->
 
         <!-- wp:image -->
-        <figure class="wp-block-image js-featured-img-popup flex items-center justify-center h-[90%]">
+        <figure class="wp-block-image js-featured-img-popup item js-item transition ease duration-200 flex items-center justify-center h-[90%]">
           <img
             src=""
             alt="popup-image"
@@ -291,7 +291,7 @@
 
 
               <div class="container_zoom cursor-move" id="items-container">
-                <div class="item js-item">
+                <div class="item js-item transition ease duration-200">
                   <img src="https://pbgorski.webo.design/pl/wp-content/uploads/sites/3/2024/01/Karty%20lokali%20Sukiennicza_2023_12_21_P1A01.jpg" alt="">
                 </div>
               </div>
