featured image popup zoom test

--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -7,7 +7,7 @@
     <!-- wp:group -->
     <div id="Page content" class="wp-block-group page-content-wrapper relative">
       <!-- wp:group -->
-      <div id="items-container" class="featured_img_popup_container container_zoom js-featured_img_popup_container opacity-0 flex items-center justify-center w-full h-full fixed top-0 left-0 bg-[rgba(0,0,0,0.8)] z-[-1] transition ease duration-75">
+      <div id="items-container" class="featured_img_popup_container container_zoom js-featured_img_popup_container opacity-0 _flex items-center justify-center w-full h-full fixed top-0 left-0 bg-[rgba(0,0,0,0.8)] z-[-1] transition ease duration-75">
 
 
         <!-- wp:group -->
