featured image popup zoom test

--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -15,7 +15,7 @@
         <!-- /wp:group -->
 
         <!-- wp:image -->
-        <figure class="wp-block-image js-featured-img-popup item js-item transition ease duration-200 flex items-center justify-center h-[90%]">
+        <figure class="wp-block-image js-featured-img-popup item js-item transition ease duration-200 flex items-center justify-center desktop:h-[90%]">
           <img
             src=""
             alt="popup-image"
