contact form styles fix

--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1742,8 +1742,7 @@ background-color: #e8fbff!important;
     @apply px-[15px];
     @apply py-[10px];
     @apply mb-[10px];
-    @apply w-[330px];
-    @apply desktop:w-full;
+    @apply w-full;
     @apply h-[240px];
     @apply text-[#2e384d];
     @apply placeholder:text-[#757575];
