desktop fancybox scroll

--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1217,7 +1217,7 @@ html body .modula .modula-items .modula-item .modula-item-content>a.modula-item-
     width: 100% !important;
     height: 100% !important;
     transform: none !important;
-    overflow: auto;
+    overflow: auto !important;
   }
   .modula-fancybox-container .modula-fancybox-content img.modula-fancybox-image{
     height: auto !important;
