default img modal test

--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -9,7 +9,7 @@
       <!-- wp:group -->
       <div id="items-container" class="featured_img_popup_container container_zoom js-featured_img_popup_container opacity-0 w-full h-full fixed top-0 left-0 bg-[rgba(0,0,0,0.8)] z-[-1] overflow-auto transition ease duration-75">
         <!-- wp:group -->
-        <div class="wp-block-group js-close-popup-featured-image text-white fixed top-[20px] right-[20px] text-[36px] cursor-pointer opacity-[0.7] hover:opacity-[1] transition ease duration-200">&#x2715;</div>
+        <div class="wp-block-group js-close-popup-featured-image text-white fixed top-[20px] right-0 text-[24px] leading-[24px] bg-[rgba(30,30,30,0.6)] p-2.5 cursor-pointer opacity-[0.7] hover:opacity-[1] transition ease duration-200">&#x2715;</div>
         <!-- /wp:group -->
 
         <!-- wp:group -->
